# docs/swagger.json
@@ -5809,7 +5809,29 @@
       "patch": {
         "tags": ["Goal"],
         "summary": "Back date all goals that were created in the current week",
-
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "noOfWeeks": {
+                    "type": "integer"
+                  },
+                  "userId": {
+                    "type": "integer"
+                  }
+                },
+                "required": ["userId", "noOfWeeks"]
+              },
+              "example": {
+                "noOfWeeks": 3,
+                "userId": 1
+              }
+            }
+          }
+        },
         "responses": {
           "200": {
             "description": "Successful operation",
